--- a/makbox/css/list_folder.css
+++ b/makbox/css/list_folder.css
@@ -46,7 +46,7 @@ transform: scale(1.5);
 
 #menu
 {
-background-image:url('/photos/linu.png');
+background-image:url('');
 background-repeat:no-repeat;
 background-size:100%;
 background-color:#283B4C;
@@ -69,7 +69,7 @@ opacity:1;
 
 
 
-#table
+#table1
 {
 border-style:;
 border-width:; 
@@ -414,6 +414,16 @@ width:38;
 
 
 
+
+
+
+
+
+
+
+
+
+
 #tr_list:hover td 
 {
 background-color: #42f489;
@@ -465,4 +475,3 @@ background-color:#87f2e7;
 	position:relative;
 	top:1px;
 }
-
